--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,11 @@
   --sidebar-accent-foreground: oklch(0.21 0.034 264.665);
   --sidebar-border: oklch(0.928 0.006 264.531);
   --sidebar-ring: oklch(0.707 0.022 261.325);
+
+  --chart-1: #6366f1;
+  --chart-2: #22d3ee;
+  --color-desktop: var(--chart-1);
+  --color-mobile: var(--chart-2);
 }
 
 .dark {
